--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kutia-software-company/larafirebase",
+    "name": "oriceon/larafirebase",
     "description": "Laravel Firebase Cloud Messaging.",
     "homepage": "https://github.com/kutia-software-company/larafirebase",
     "license": "MIT",
@@ -18,8 +18,8 @@
         ]
     },
     "require": {
-        "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
-        "illuminate/notifications": "^8.0|^9.0|^10.0|^11.0"
+        "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0",
+        "illuminate/notifications": "^8.0|^9.0|^10.0|^11.0|^12.0"
     },
     "config": {
         "sort-packages": true
